--- a/public/resume.html
+++ b/public/resume.html
@@ -162,7 +162,7 @@
             <tr>
                 <td>
                     <ul>
-                        <li>HTML 5</li>
+                        <li class="padding-8">HTML 5</li>
                         <li>CSS 3</li>
                         <li>Bootstrap</li>
                     </ul>
@@ -197,7 +197,7 @@
             <tr>
                 <td>
                     <ul>
-                        <li>Git</li>
+                        <li class="padding-8">Git</li>
                         <li>WordPress</li>
                         <li>Sketch</li>
                     </ul>
@@ -216,7 +216,7 @@
             <tr>
                 <td colspan="2">
                     <ul>
-                        <li>Jeff Vinnick</li>
+                        <li class="padding-8">Jeff Vinnick</li>
                         <li>Jeff Vinnick Images</li>
                         <li>Professional Photographer</li>
                         <li>4056 West 29th Avenue</li>
@@ -238,7 +238,7 @@
             <tr>
                 <td colspan="2">
                     <ul>
-                        <li>James Miller</li>
+                        <li class="padding-8">James Miller</li>
                         <li>Penticton Herald</li>
                         <li>Valley Wide Editor</li>
                         <li>101 - 186 Nanaimo Ave West</li>
@@ -260,7 +260,7 @@
             <tr>
                 <td colspan="2">
                     <ul>
-                        <li>Gord Barnes</li>
+                        <li class="padding-8">Gord Barnes</li>
                         <li>Penticton Secondary School</li>
                         <li>Digital Photography/Media Teacher</li>
                         <li>158 Eckhardt Avenue East</li>
