--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
             <p id="text"></p>
             <p id="date"></p>
             <p><a href="resume.html">resume</a></p>
+            <!-- <button>i'm feeling lucky</button>-->
         </article>
     </section>
 <!-- index javascript -->
