--- a/public/resume.html
+++ b/public/resume.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="resume">
-        <h1 class="neon">coleman jackson</h1>
+        <a href="index.html"><h1 class="neon">coleman jackson</h1></a>
         <article class="group">
             <p>604-785-3328</p>
             <p>Vancouver, BC</p>
@@ -282,5 +282,7 @@
         </table>
     </section>
     <footer></footer>
+<!-- index javascript -->
+<script src="js/index.js"></script>
 </body>
 </html>
