--- a/public/images.html
+++ b/public/images.html
@@ -17,9 +17,11 @@
         <p id="date"></p>
     </article>
     <section class="slider">
-        <button id="btn-prev" onclick="sliderFunc('prev')">prev</button>
-        <img id="slider" src="img/ambleside_park_20170528_044612_CJI__71U3569.jpg" />
-        <button id="btn-next" onclick="sliderFunc('next')">next</button>
+        <img id="slider" class="img" src="img/ambleside_park_20170528_044612_CJI__71U3569.jpg" />
+        <article class="prev-next">
+            <button id="btn-prev" onclick="sliderFunc('prev')">prev</button>
+            <button id="btn-next" onclick="sliderFunc('next')">next</button>
+        </article>
     </section>
 </section>
 <!-- index javascript -->
