--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
             <p><a href="resume.html">resume</a></p>
             <p><a href="images.html">images</a></p>
             <p><a href="http://bss.blacktec.co/" target="_blank">box spring studios</a></p>
+            <p><a href="http://ttdy.blacktec.co/" target="_blank">time to do you</a></p>
+            <p><a href="http://sat.blacktec.co/" target="_blank">sask agri tech</a></p>
             <!-- <button>i'm feeling lucky</button>-->
         </article>
     </section>
